syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
package uz.bakhromjon.grpc.post;

service PostService {
  rpc GetPost(PostGetRequestGrpc) returns (PostResponseGrpc);
  rpc GetPostList(google.protobuf.Empty) returns (PostResponseListGrpc);
  rpc UpdatePost(PostUpdateRequestGrpc) returns (PostResponseGrpc);
  rpc DeletePost(PostDeleteRequestGrpc) returns (google.protobuf.Empty);
}



message PostResponseGrpc {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string body = 4;
}

message PostResponseListGrpc {
  repeated PostResponseGrpc posts = 1;
}

message PostDeleteRequestGrpc {
  int64 id = 1;
}

message PostGetRequestGrpc {
  int64 id = 1;
}

message PostUpdateRequestGrpc {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string body = 4;
}